# dataset_rag

./: .env  .gitignore  CLAUDE.md  pyproject.toml
app/clients/: mcp_client.py  minio_utils.py
app/import_process/agent/: main_graph.py  state.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: import_server.py
app/import_process/page/: import.html
app/query_process/agent/: main_graph.py
app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/api/: query_service.py
docs/: 文档导入流程.drawio  查询流程.drawio
test/: 04-test_graph_flow.py
